--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.16.1",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/qrcode": "^1.5.5",
     "eslint": "^9.35.0",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "nodemailer": "^7.0.6",
     "nuxt": "^4.1.1",
     "pinia": "^3.0.3",
+    "qrcode": "^1.5.4",
     "typescript": "^5.9.2",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
