Fix Netlify build issues and add BASE_URL configuration
- Update Node.js version to 20 for better compatibility
- Fix crypto.hash error with Vite configuration
- Add BASE_URL environment variable support
- Create comprehensive .env.example file
- Add build:netlify script with cache clearing
- Update netlify.toml to use optimized build command
- Add .netlify to .gitignore to prevent build artifacts in repo

--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "nuxt-app",
   "type": "module",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "build": "nuxt build",
+    "build": "rm -rf .nuxt .output && nuxt build",
+    "build:netlify": "rm -rf .nuxt .output node_modules/.cache && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
