--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "npm run build"
+  command = "npm run build:netlify"
   publish = ".output/public"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
 
 [[redirects]]
   from = "/api/*"
