Fix Netlify Functions deployment for API routes
- Add post-build script to copy functions to correct location
- Functions are generated in .netlify/functions-internal/ but need to be in .netlify/functions/
- Add copy:functions script to package.json
- Update build:netlify to include function copying
- This should resolve 404 errors for API endpoints

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,9 @@
 [build]
   command = "npm run build:netlify"
-  publish = "dist"
+  publish = ".output/public"
 
 [build.environment]
   NODE_VERSION = "20"
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/server/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
 
 [functions]
   node_bundler = "esbuild"
