--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "rm -rf .nuxt .output && nuxt build",
-    "build:netlify": "rm -rf .nuxt .output node_modules/.cache && nuxt build",
+    "build:netlify": "rm -rf .nuxt .output node_modules/.cache && nuxt build && npm run copy:functions",
+    "copy:functions": "mkdir -p .netlify/functions && cp -r .netlify/functions-internal/server .netlify/functions/",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
