Implement QR code scanning flow with email notifications
- Add /qr-scan page for QR code scanning and access requests
- Create property details API endpoint for QR code processing
- Update QR code generation to include property ID in URL
- Add email notification system using nodemailer
- Send notifications to property owner and emergency contacts
- Send confirmation email to requester
- Update dashboard QR code modal with download and copy features
- Simplify access request flow to email-only (no phone/SMS required)
- Add comprehensive error handling and user feedback

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.16.1",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "eslint": "^9.35.0",
     "firebase": "^12.2.1",
