--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
+    "@types/ua-parser-js": "^0.7.39",
     "eslint": "^9.35.0",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
@@ -33,6 +34,7 @@
     "pinia": "^3.0.3",
     "qrcode": "^1.5.4",
     "typescript": "^5.9.2",
+    "ua-parser-js": "^2.0.5",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
