--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.16.1",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/leaflet": "^1.9.20",
     "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "@types/ua-parser-js": "^0.7.39",
     "eslint": "^9.35.0",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
+    "leaflet": "^1.9.4",
     "nodemailer": "^7.0.6",
     "nuxt": "^4.1.1",
     "pinia": "^3.0.3",
