--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.16.0",
     "nodemailer": "^7.0.6",
     "nuxt": "^4.1.1",
     "pinia": "^3.0.3",
