--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/supabase": "^1.6.2",
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.16.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@supabase/supabase-js": "^2.57.4",
     "@types/leaflet": "^1.9.20",
     "@types/nodemailer": "^7.0.1",
@@ -37,6 +38,7 @@
     "nuxt": "^4.1.1",
     "pinia": "^3.0.3",
     "qrcode": "^1.5.4",
+    "stripe": "^20.0.0",
     "typescript": "^5.9.2",
     "ua-parser-js": "^2.0.5",
     "vue": "^3.5.21",
