Add domain parking setup guide and implement coming soon page. Update netlify.toml with redirect rules for parked domain. Enhance UI for the coming soon page with branding and contact information.

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,18 @@
 
 [functions]
   node_bundler = "esbuild"
+
+Redirects for parked domain
+Replace "your-parked-domain.com" with your actual domain
+Uncomment and configure when ready to use
+[[redirects]]
+  from = "https://mysafehouse.co.uk/*"
+  to = "/coming-soon"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "https://www.mysafehouse.co.uk/*"
+  to = "/coming-soon"
+  status = 200
+  force = true
