--- a/netlify.toml
+++ b/netlify.toml
@@ -8,9 +8,9 @@
 [functions]
   node_bundler = "esbuild"
 
-Redirects for parked domain
-Replace "your-parked-domain.com" with your actual domain
-Uncomment and configure when ready to use
+# Redirects for parked domain
+# Replace "your-parked-domain.com" with your actual domain
+# Uncomment and configure when ready to use
 [[redirects]]
   from = "https://mysafehouse.co.uk/*"
   to = "/coming-soon"
