--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pinia": "^3.0.3",
     "qrcode": "^1.5.4",
     "stripe": "^20.0.0",
+    "twilio": "^5.10.7",
     "typescript": "^5.9.2",
     "ua-parser-js": "^2.0.5",
     "vue": "^3.5.21",
