Update MySafeHouse branding in documentation and configuration files. Enhance map URL generation to support customizable styles. Add missing paragraph in login page for improved user experience. Include empty lines in API files for better readability.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nuxt-app",
   "type": "module",
   "private": true,
+  "imports": {
+    "#internal/*": "./.nuxt/*"
+  },
   "engines": {
     "node": ">=20.0.0"
   },
