--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nuxt": "^4.1.1",
     "pinia": "^3.0.3",
     "qrcode": "^1.5.4",
+    "sharp": "^0.34.5",
     "stripe": "^20.0.0",
     "twilio": "^5.10.7",
     "typescript": "^5.9.2",
